# PlantParent

./: .gitignore  package-lock.json  pyproject.toml
backend/: __main__.py
backend/app/: api.py  database.py  models.py
backend/plantparent/: __init__.py  __main__.py  api.py  database.py  models.py
backend/tests/: conftest.py  test_db_interactions.py  test_plants.py
frontend/: package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/: types.ts
frontend/src/routes/: +page.server.ts  +page.svelte  +page.ts  AdoptionForm.svelte  CardHolder.svelte  FormBodies.svelte  styles.css
frontend/src/routes/adoption/: AdoptionForm.svelte  FormBodies.svelte  FormCareBody.svelte  FormNamesBody.svelte
frontend/src/styles/: carousel.css  formStyles.css  styles.css
