[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plantparent"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "hatch>=1.14.0",
    "pytest>=8.3.5",
]

[tool.hatch.version]
path = "./backend/plantparent/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["backend/plantparent"]

[tool.pytest.ini_options]
addopts = "-v --capture=tee-sys"
testpaths = [
    "backend/tests"
]
log_cli = true



